--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@daybrush/jsdoc",
-  "version": "0.3.9",
+  "version": "0.3.11",
   "description": "An API documentation generator for JavaScript and Typescript.",
   "keywords": [
     "documentation",
@@ -20,7 +20,7 @@
     "@babel/parser": "^7.2.3",
     "@babel/types": "^7.2.2",
     "@daybrush/utils": "^1.0.0",
-    "ast-parser": "0.0.5",
+    "ast-parser": "^0.1.0",
     "bluebird": "~3.5.0",
     "catharsis": "~0.8.9",
     "escape-string-regexp": "~1.0.5",
